istio-teaching/wholecase/emailservice-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice-v1
spec:
  selector:
    matchLabels:
      app: emailservice
      version: v1
  template:
    metadata:
      labels:
        app: emailservice
        version: v1
      annotations:
        sidecar.istio.io/userVolumeMount: '[{"name":"wasm", "mountPath":"/var/local/lib/wasm-filters", "readonly":true}]'
        sidecar.istio.io/userVolume: '[{"name":"wasm", "configmap":{"name":"wasm"}}]'
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: alexshu/emailservice:v0.2.1
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
