istio-teaching/wholecase/ef.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-v1
spec:
  workloadSelector:
    labels:
      version: v1
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    "header_key":"version",
                    "header_value":"v1"
                  }
              root_id: version_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters/request_header.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: version_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-v2
spec:
  workloadSelector:
    labels:
      version: v2
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    "header_key":"version",
                    "header_value":"v2"
                  }
              root_id: version_v2
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters/request_header.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: version_v2
